+ minor changes to puzzle.py + started work on documentation

--- a/Documentation/lecture_examples_python.tex
+++ b/Documentation/lecture_examples_python.tex
@@ -3,3 +3,25 @@
 \usepackage{fancyvrb}
 \usepackage{a4wide}
 \usepackage{hyperref}
+
+Einleitung
+
+SetlX für mathematische Ausdrücke gut
+Viel mit Sets gearbeitet
+
+
+Warum Python?
+
+Eine \"schnelle\" Skriptsprache
+Leicht zu lernen
+Höhere Sprache als SetlX
+Sehr Verbreitet
+
+
+Skripte in reinem Python
+
+Trotz dessen, dass die Erstellung des Python Moduls als Hauptbestandteil dieser Arbeit gesehen wird, ist es durchaus möglich einige SetlX Programme ohne zusätzliche, nicht enthaltene Module anzufertigen.
+
+
+Python Modul lecture
+
