+ work on documentation + fixed simple.py - removed unnecessary imports

--- a/Documentation/lecture_examples_python.tex
+++ b/Documentation/lecture_examples_python.tex
@@ -11,7 +11,7 @@
 \begin{document}
 
 \title{Implementierung von SetlX-Programmen in Python}
-\author{Boschamnn, Johann; Palackal, Joseph}
+\author{Boschamnn, Johann and Palackal, Joseph}
 
 \tableofcontents
 
